# conway-gol-c

./: CMakeLists.txt  README.md  gol-configs.txt  main.c
